hphp/test/slow/readonly/elem_cow_unset.php.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Read-Only collections cannot be mutated.' in %s/elem_cow_unset.php:26
%A
